# EngineForAnimationCourse

./: CMakeLists.txt  README.md
engine/: DrawVisitor.cpp  Mesh.h  Model.h  Movable.cpp  Movable.h  Scene.cpp
tutorial/: CMakeLists.txt
tutorial/Assignment1/: SceneWithCameras.cpp
tutorial/Assignment3/: BasicScene.cpp  BasicScene.h
tutorial/Demo/: SceneWithCameras.cpp
tutorial/DualQuaternionSkinningTutorial/: DualQuaternionSkinningTutorial.cpp
tutorial/Project/: BasicScene.cpp  BasicScene.h  BoundableModel.cpp  BoundableModel.h  CMakeLists.txt  MovingObject.cpp  MovingObject.h  PeriodicExecutor.cpp  PeriodicExecutor.h  Project.cpp  Skeleton.cpp  Skeleton.h  SkinnedSnakeModel.cpp  SkinnedSnakeModel.h  SoundHandler.h  SoundManager.h  algebra.h  bezier_curve.h  functionals.h  joint.h  types_macros.h
tutorial/shaders/: BombShader.glsl  PrizeShader.glsl  PrizeShader.vs  SpawnerShader.glsl  SpawnerShader.vs  cubemapShader.glsl  phongShader.glsl
